# android-helper-tauri

./: .gitignore  README.md  build.bat  index.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/tools/scrcpy/: sconfig.ini
src-tauri/tools/scrcpy/temp/: man.txt  serno.txt
src/components/: DeviceBar.vue  LogPanel.vue  Sidebar.vue
src/router/: index.ts
src/stores/: device.ts  log.ts  settings.ts
src/styles/: main.scss
src/utils/: adb.ts
src/views/: ActivityView.vue  ApkInfoView.vue  AppsView.vue  BackupView.vue  BatteryView.vue  DeviceInfoView.vue  DeviceView.vue  ExtractView.vue  FavoritesView.vue  FileView.vue  FlashView.vue  LogcatView.vue  NetworkView.vue  PatchBootView.vue  PerfView.vue  PermissionView.vue  PropView.vue  ProxyView.vue  RootView.vue  ScreenView.vue  SecurityView.vue  SettingsView.vue  ShellView.vue
