[package]
name = "android-helper-tauri"
version = "1.0.0"
description = "Android玩机助手 - Tauri版"
authors = ["you"]
edition = "2021"

[lib]
name = "android_helper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
